--- a/style.css
+++ b/style.css
@@ -24,6 +24,18 @@ h1,h2{
     border-radius: 10px;
 }
 
+img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+#img-con{
+    width: 100%;
+    height: 100%;
+}
+
+
 p{
     margin-bottom: 5px;
     font-family: sans-serif;
